# yacut

./: .env.example  README.md  pyproject.toml  settings.py
migrations/versions/: 6023d1404210_.py
yacut/: api_views.py  error_handlers.py  forms.py  models.py  views.py
yacut/templates/: 404.html  add_short_link.html  base.html  header.html
